; ModuleID = '/home/carl/AnghaBench/libgit2/tests/worktree/extr_reflog.c_test_worktree_reflog__read_worktree_HEAD.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/worktree/extr_reflog.c_test_worktree_reflog__read_worktree_HEAD.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32 }

@fixture = common dso_local global %struct.TYPE_2__ zeroinitializer, align 4
@.str = private unnamed_addr constant [5 x i8] c"HEAD\00", align 1
@.str.1 = private unnamed_addr constant [84 x i8] c"checkout: moving from 099fabac3a9ea935598528c27f866e34089c2eff to testrepo-worktree\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_worktree_reflog__read_worktree_HEAD() #0 {
  %1 = alloca i32*, align 8
  %2 = alloca i32*, align 8
  %3 = load i32, i32* getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @fixture, i32 0, i32 0), align 4
  %4 = call i32 @git_reflog_read(i32** %1, i32 %3, i8* getelementptr inbounds ([5 x i8], [5 x i8]* @.str, i64 0, i64 0))
  %5 = call i32 @cl_git_pass(i32 %4)
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @git_reflog_entrycount(i32* %6)
  %8 = call i32 @cl_assert_equal_i(i32 1, i32 %7)
  %9 = load i32*, i32** %1, align 8
  %10 = call i32* @git_reflog_entry_byindex(i32* %9, i32 0)
  store i32* %10, i32** %2, align 8
  %11 = load i32*, i32** %2, align 8
  %12 = icmp ne i32* %11, null
  %13 = zext i1 %12 to i32
  %14 = call i32 @cl_assert(i32 %13)
  %15 = load i32*, i32** %2, align 8
  %16 = call i32 @git_reflog_entry_message(i32* %15)
  %17 = call i32 @cl_assert_equal_s(i8* getelementptr inbounds ([84 x i8], [84 x i8]* @.str.1, i64 0, i64 0), i32 %16)
  %18 = load i32*, i32** %1, align 8
  %19 = call i32 @git_reflog_free(i32* %18)
  ret void
}

declare dso_local i32 @cl_git_pass(i32) #1

declare dso_local i32 @git_reflog_read(i32**, i32, i8*) #1

declare dso_local i32 @cl_assert_equal_i(i32, i32) #1

declare dso_local i32 @git_reflog_entrycount(i32*) #1

declare dso_local i32* @git_reflog_entry_byindex(i32*, i32) #1

declare dso_local i32 @cl_assert(i32) #1

declare dso_local i32 @cl_assert_equal_s(i8*, i32) #1

declare dso_local i32 @git_reflog_entry_message(i32*) #1

declare dso_local i32 @git_reflog_free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
